# RPGTranslator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  galgame_rpgmaker_translator_spec (1).md  pyproject.toml
docs/superpowers/specs/: 2026-07-18-translate-retry-design.md  2026-07-23-bundled-local-model-design.md
scripts/: build.py  build_full.py
src/rpg_translator/: cli.py  config.py  logging_setup.py
src/rpg_translator/codec/: control_codes.py  rvdata2_codec.py
src/rpg_translator/core/: evb_unpack.py  ir.py  pipeline.py  store.py
src/rpg_translator/engines/: _rgss_common.py  _vxace_message_patch.py  _vxace_scripts.py  base.py  mv_mz.py  vxace.py  wolf.py  wolf_binary.py  xp_vx.py
src/rpg_translator/gui/: app.py  glossary_dialog.py  main_window.py  settings_dialog.py  workers.py
src/rpg_translator/translate/: batch_translator.py  glossary.py  llm_client.py  local_engine.py  pricing.py  qa.py  sakura_prompt.py
tests/: conftest.py  test_batch_translator.py  test_build_full.py  test_cli.py  test_control_codes.py  test_engines_mv_mz.py  test_engines_vxace.py  test_engines_wolf.py  test_engines_xp_vx.py  test_glossary.py  test_gui.py  test_ir.py  test_llm_client.py  test_local_engine.py  test_pipeline.py  test_pricing.py  test_pywinauto_real_click_repro.py  test_qa.py  test_rgss_line_wrap.py  test_rvdata2_codec.py  test_sakura_prompt.py  test_store.py  test_vxace_scripts.py
