[project]
name = "rpg_translator"
version = "0.5.0"
description = "RPG Maker MV/MZ/VX Ace 文本提取/翻译/回填工具"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx[http2]>=0.27",
    "keyring>=24",
    "typer>=0.12",
    "PySide6>=6.6",
    "rubymarshal>=1.0",
    "lz4>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyinstaller>=6.0",
]

[project.scripts]
rpg-translator = "rpg_translator.cli:app"

[project.gui-scripts]
rpg-translator-gui = "rpg_translator.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpg_translator"]
