[project]
name = "rpg_translator"
version = "0.7.1"
description = "RPG Maker MV/MZ/VX Ace 文本提取/翻译/回填工具"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx[http2]>=0.27",
    "keyring>=24",
    "typer>=0.12",
    "PySide6>=6.6",
    "rubymarshal>=1.0",
    "lz4>=4.0",
    "evbunpack>=0.2.6",
    "pefile>=2023.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyinstaller>=6.0",
    "py7zr>=0.21",       # scripts/build_full.py：完全版 7z 分卷打包
    "multivolumefile>=0.2.3",  # 同上，py7zr 的分卷 API 依赖这个包直接调用
]

[project.scripts]
rpg-translator = "rpg_translator.cli:app"

[project.gui-scripts]
rpg-translator-gui = "rpg_translator.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpg_translator"]
